criando o README.md

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>DFTech - Curso de Informática Básica</title>
 </head>
 <body>
-   <h1>Curso de Informática Básica</h1>
-   
+   <p><b>Curso de Informática Básica.</b></p>
 </body>
 </html>
