--- a/index.html
+++ b/index.html
@@ -7,6 +7,48 @@
     <title>DFTech - Curso de Informática Básica</title>
 </head>
 <body>
-   <p><b>Curso de Informática Básica.</b></p>
+   <h1 style="color: blue;"> Curso de Informática Básica.</h1>
+   <h2 style="color: rgb(168, 0, 0)">Conteúdo Programático</h2>
+   <h3>Módulo I- Introdução à Informática</h3>
+
+<h4>Fundamentos de hardware</h4>
+<u1>
+<li> Definição</li>
+<li> Evolução</li>
+<li> Arquitetura (componentes e periféricos) </li>
+</u1>
+<h4 style="color:blue;">Fundamentos de protocolos</h4>
+<ul>
+    <li>Definição</li>
+    <li>Evolução</li>
+    <li>Tipos e características</li>
+    <ul>
+        <li>Classificação</li>
+        <li>estrutura</li>
+        <li>modelos</li>
+        <li>HTTP</li>
+        <li>FTP</li>
+        <li>SMTP</li>
+    </ul>
+</ul>
+
+
+1. SISTEMA OPERACIONAL 1.1 Evolução 1.2 Definição 1.3 Classificação 1.4 Aplicação 1.5 Arquitetura 1.5.1 Definição 1.5.2 Componentes 1.6 Trabalho com janelas 1.7 Área de trabalho 1.8 Área de notificação 1.9 Configuração do sistema 1.10 Principais aplicativos 1.11 Menu de ajuda 1.12 Gerenciamento de 1.1 .2 Verificando as ferramentas de acordo com a necessidade do usuário. - Identificar aplicativos e suas funcionalidades de acordo com as necessidades do usuário. 1.1 .3 Realizando ajustes, quando necessário. - Definir configurações básicas do sistema operacional e aplicativos de acordo com suas necessidades
+
+1.1 .5 Considerando as necessidades dos usuários em conformidade com os padrões estabelecidos - Identificar os tipos e características de sistemas operacionais - Organizar pastas e arquivos de acordo com boas práticas de utilização do sistema operacional arquivos 1.13 Gerenciamento de usuários e permissões 1.14 Estrutura de Diretórios 1.15 Atualização do sistema operacional aplicativos 2. COMANDOS DE SHELL BÁSICO 2.1 Diretórios: Navegação, Criação, Exclusão 2.2 Arquivos: Criação, Exclusão 2.3 Alteração de nome 2.4 Classificação 2.5 Visualização 2.6 Pesquisa 2.7 Ferramentas de edição de texto 3. CATEGORIAS DE SOFTWARES 3.1 Conceitos 3.2 Aplicações
+<script>
+    /* 
+    A memória Ram é a memória principal
+    Quando criamos uma variável
+    armazenamos dados na variável
+    */
+   var msg ="Olá aluno, seja Bem-Vindo ao curso DF-InovaTech."
+const dataAtual = new Date()
+
+const dataFormatada = dataAtual.toLocaleDateString('pt-br');
+alert(msg+" "+dataFormatada)
+console.log(msg+" "+dataFormatada);
+
+</script>
 </body>
 </html>
