--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <li> Evolução</li>
 <li> Arquitetura (componentes e periféricos) </li>
 </u1>
-<h4 style="color:blue;">Fundamentos de protocolos</h4>
+<h4 style="color:gray;">Fundamentos de protocolos</h4>
 <ul>
     <li>Definição</li>
     <li>Evolução</li>
@@ -32,6 +32,7 @@
     </ul>
 </ul>
 
+<h5 style="color:brown;">Módulo II - Sistemas Operacionais</h5>
 
 1. SISTEMA OPERACIONAL 1.1 Evolução 1.2 Definição 1.3 Classificação 1.4 Aplicação 1.5 Arquitetura 1.5.1 Definição 1.5.2 Componentes 1.6 Trabalho com janelas 1.7 Área de trabalho 1.8 Área de notificação 1.9 Configuração do sistema 1.10 Principais aplicativos 1.11 Menu de ajuda 1.12 Gerenciamento de 1.1 .2 Verificando as ferramentas de acordo com a necessidade do usuário. - Identificar aplicativos e suas funcionalidades de acordo com as necessidades do usuário. 1.1 .3 Realizando ajustes, quando necessário. - Definir configurações básicas do sistema operacional e aplicativos de acordo com suas necessidades
 
